// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@example tests > CHAR_CODE_AT > CHAR_CODE_AT("ABC", 0) 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 65 │
└───┴────┘
"
`;

exports[`@example tests > CHAR_CODE_AT > CHAR_CODE_AT("ABC", 1) 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 66 │
└───┴────┘
"
`;

exports[`@example tests > CHAR_CODE_AT > CHAR_CODE_AT("ABC", 2) 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 67 │
└───┴────┘
"
`;

exports[`@example tests > CONCAT("hello", " ", "world") 1`] = `
"
┌───┬───────────────┐
│   │ A             │
├───┼───────────────┤
│ 1 │ "hello world" │
└───┴───────────────┘
"
`;

exports[`@example tests > FIND_FIRST > FIND_FIRST("321", INTO(DIGITS())) 1`] = `
"
┌───┬─────┐
│   │ A   │
├───┼─────┤
│ 1 │ "3" │
└───┴─────┘
"
`;

exports[`@example tests > FIND_FIRST > FIND_FIRST("12345", "5", "4", "3", "2", "1") 1`] = `
"
┌───┬─────┐
│   │ A   │
├───┼─────┤
│ 1 │ "1" │
└───┴─────┘
"
`;

exports[`@example tests > FIND_FIRST > FIND_FIRST("The quick brown fox jumps over the lazy dog", "dog", "fox") 1`] = `
"
┌───┬───────┐
│   │ A     │
├───┼───────┤
│ 1 │ "fox" │
└───┴───────┘
"
`;

exports[`@example tests > FIND_FIRST > FIND_FIRST("The quick brown fox jumps over the lazy dog", "fox", "dog") 1`] = `
"
┌───┬───────┐
│   │ A     │
├───┼───────┤
│ 1 │ "fox" │
└───┴───────┘
"
`;

exports[`@example tests > FIND_FIRST_INDEX > FIND_FIRST_INDEX("The quick brown fox jumps over the lazy dog", "dog", "fox") 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 16 │
└───┴────┘
"
`;

exports[`@example tests > FIND_FIRST_INDEX > FIND_FIRST_INDEX("The quick brown fox jumps over the lazy dog", "fox", "dog") 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 16 │
└───┴────┘
"
`;

exports[`@example tests > FIND_LAST > FIND_LAST("The quick brown fox jumps over the lazy dog", "dog", "fox") 1`] = `
"
┌───┬───────┐
│   │ A     │
├───┼───────┤
│ 1 │ "dog" │
└───┴───────┘
"
`;

exports[`@example tests > FIND_LAST > FIND_LAST("The quick brown fox jumps over the lazy dog", "fox", "dog") 1`] = `
"
┌───┬───────┐
│   │ A     │
├───┼───────┤
│ 1 │ "dog" │
└───┴───────┘
"
`;

exports[`@example tests > FIND_LAST_INDEX > FIND_LAST_INDEX("The quick brown fox jumps over the lazy dog", "dog", "fox") 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 40 │
└───┴────┘
"
`;

exports[`@example tests > FIND_LAST_INDEX > FIND_LAST_INDEX("The quick brown fox jumps over the lazy dog", "fox", "dog") 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 40 │
└───┴────┘
"
`;

exports[`@example tests > JOIN("-", 1, 2, "hello", "world", TRUE()) 1`] = `
"
┌───┬────────────────────────┐
│   │ A                      │
├───┼────────────────────────┤
│ 1 │ "1-2-hello-world-TRUE" │
└───┴────────────────────────┘
"
`;

exports[`@example tests > LEN("Hello, World!") 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 13 │
└───┴────┘
"
`;

exports[`@example tests > LOWER("Hello, World!") 1`] = `
"
┌───┬─────────────────┐
│   │ A               │
├───┼─────────────────┤
│ 1 │ "hello, world!" │
└───┴─────────────────┘
"
`;

exports[`@example tests > PAD_END("123", 5, "0") 1`] = `
"
┌───┬─────────┐
│   │ A       │
├───┼─────────┤
│ 1 │ "12300" │
└───┴─────────┘
"
`;

exports[`@example tests > PAD_START("123", 5, "0") 1`] = `
"
┌───┬─────────┐
│   │ A       │
├───┼─────────┤
│ 1 │ "00123" │
└───┴─────────┘
"
`;

exports[`@example tests > REPLACE_ALL("The quick brown fox jumps over the lazy dog", "fox", "cat", "dog", "wolf") 1`] = `
"
┌───┬────────────────────────────────────────────────┐
│   │ A                                              │
├───┼────────────────────────────────────────────────┤
│ 1 │ "The quick brown cat jumps over the lazy wolf" │
└───┴────────────────────────────────────────────────┘
"
`;

exports[`@example tests > SPLIT("Hello World", " ") 1`] = `
"
┌───┬─────────┬─────────┐
│   │ A       │ B       │
├───┼─────────┼─────────┤
│ 1 │ "Hello" │ "World" │
└───┴─────────┴─────────┘
"
`;

exports[`@example tests > TEXT_CHUNK("ABCDE", 2) 1`] = `
"
┌───┬──────┬──────┬─────┐
│   │ A    │ B    │ C   │
├───┼──────┼──────┼─────┤
│ 1 │ "AB" │ "CD" │ "E" │
└───┴──────┴──────┴─────┘
"
`;

exports[`@example tests > TEXT_SLICE > TEXT_SLICE("The quick brown fox jumps over the lazy dog", -3) 1`] = `
"
┌───┬───────┐
│   │ A     │
├───┼───────┤
│ 1 │ "dog" │
└───┴───────┘
"
`;

exports[`@example tests > TEXT_SLICE > TEXT_SLICE("The quick brown fox jumps over the lazy dog", 0, 19) 1`] = `
"
┌───┬───────────────────────┐
│   │ A                     │
├───┼───────────────────────┤
│ 1 │ "The quick brown fox" │
└───┴───────────────────────┘
"
`;

exports[`@example tests > TEXT_SLICE > TEXT_SLICE("The quick brown fox jumps over the lazy dog", 10, 19) 1`] = `
"
┌───┬─────────────┐
│   │ A           │
├───┼─────────────┤
│ 1 │ "brown fox" │
└───┴─────────────┘
"
`;

exports[`@example tests > TEXT_SLICE > TEXT_SLICE("The quick brown fox jumps over the lazy dog", 40) 1`] = `
"
┌───┬───────┐
│   │ A     │
├───┼───────┤
│ 1 │ "dog" │
└───┴───────┘
"
`;

exports[`@example tests > TEXT_WINDOW("ABCDE", 2) 1`] = `
"
┌───┬──────┬──────┬──────┬──────┐
│   │ A    │ B    │ C    │ D    │
├───┼──────┼──────┼──────┼──────┤
│ 1 │ "AB" │ "BC" │ "CD" │ "DE" │
└───┴──────┴──────┴──────┴──────┘
"
`;

exports[`@example tests > TRIM("  Hello, World!  ") 1`] = `
"
┌───┬─────────────────┐
│   │ A               │
├───┼─────────────────┤
│ 1 │ "Hello, World!" │
└───┴─────────────────┘
"
`;

exports[`@example tests > UPPER("Hello, World!") 1`] = `
"
┌───┬─────────────────┐
│   │ A               │
├───┼─────────────────┤
│ 1 │ "HELLO, WORLD!" │
└───┴─────────────────┘
"
`;
